[package]
name = "log_reader"
version = "0.1.0"
authors = ["Marco Napetti <mnapetti@alpenite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
clap = "2.33"
log = "0.4"
env_logger = "0.7"
